--- a/templates/password.html
+++ b/templates/password.html
@@ -2,17 +2,18 @@
 <html lang="hi">
 <head>
     <meta charset="UTF-8">
-    <title>Enter Password</title>
+    <title>पासवर्ड सुरक्षा</title>
 </head>
 <body>
-    <h2>कृपया पासवर्ड दर्ज करें</h2>
+    <h2>कृपया पासवर्ड डालें</h2>
+
     {% if error %}
-        <p style="color:red;">{{ error }}</p>
+        <p style="color: red;">{{ error }}</p>
     {% endif %}
-    <form method="post">
-        <label for="password">पासवर्ड:</label>
-        <input type="password" name="password" required>
-        <button type="submit">जमा करें</button>
+
+    <form action="/password" method="post">
+        <input type="password" name="password" placeholder="पासवर्ड">
+        <button type="submit">सबमिट करें</button>
     </form>
 </body>
 </html>
