--- a/templates/password.html
+++ b/templates/password.html
@@ -1,19 +1,17 @@
+
 <!DOCTYPE html>
-<html lang="hi">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>पासवर्ड सुरक्षा</title>
+    <title>Password Required</title>
 </head>
 <body>
-    <h2>कृपया पासवर्ड डालें</h2>
-
-    {% if error %}
-        <p style="color: red;">{{ error }}</p>
-    {% endif %}
-
-    <form action="/password" method="post">
-        <input type="password" name="password" placeholder="पासवर्ड">
-        <button type="submit">सबमिट करें</button>
+    <h2>🔒 Enter Password to Access Test</h2>
+    <form method="POST">
+        <input type="password" name="password" required>
+        <button type="submit">Enter</button>
     </form>
+    {% if error %}
+        <p style="color:red;">{{ error }}</p>
+    {% endif %}
 </body>
 </html>
