--- a/templates/test.html
+++ b/templates/test.html
@@ -46,7 +46,8 @@
           <div class="card-body">
             {% for key, value in q.options.items() %}
               <div class="form-check option-box {{ key }}">
-                <input class="form-check-input" type="checkbox" name="q{{ q.id }}" value="{{ key }}" id="{{ q.id }}{{ key }}">
+                <!-- ✅ Corrected name: q{{ q.id }} -->
+                <input class="form-check-input" type="radio" name="q{{ q.id }}" value="{{ key }}" id="{{ q.id }}{{ key }}">
                 <label class="form-check-label" for="{{ q.id }}{{ key }}">
                   <strong>{{ key }}:</strong> {{ value }}
                 </label>
