updated with tamplates/result page

--- a/templates/result.html
+++ b/templates/result.html
@@ -34,7 +34,7 @@
 <body>
 
     <div class="container">
-        <h2 class="text-center text-primary mb-5">📊 Your Test Results</h2>
+        <h2 class="text-center text-primary mb-5">📊 Result of Memory</h2>
 
         {% for r in results %}
             <div class="card mb-4">
